--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,8 +20,19 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'com.android.support:design:23.1.1'
+    compile project(':smack-core-4.1.5')
+    compile project(':smack-sasl-provided-4.1.5')
+    compile project(':smack-tcp-4.1.5')
+    compile project(':smack-java7-4.1.5-javadoc')
+    compile 'org.jxmpp:jxmpp-util-cache:0.5.0-alpha7'
+    compile 'org.jxmpp:jxmpp-core:0.5.0-alpha7'
+    compile project(':smack-android-4.1.5')
+    compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'com.google.android.gms:play-services-appindexing:8.1.0'
+    compile project(':smack-im-4.1.5')
+    compile project(':smack-extensions-4.1.5')
 }
