--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,7 +37,7 @@
         </activity>
 
         <activity
-            android:name=".components.contacts.ContactActivity"
+            android:name=".components.contacts.ContactListFragment"
             android:label="NaonedChat"
             android:theme="@style/AppTheme.NoActionBar">
         </activity>
